--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@commitlint/config-conventional": "^15.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -33,6 +34,7 @@
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
     "standard-version": "^9.3.2",
+    "styled-components": "^5.3.9",
     "typescript": "^4.5.2",
     "vite": "^2.6.14"
   },
